# python-sample-project

./: README.md  dev.sh  pyproject.toml
.devcontainer/: devcontainer.json
hooks/: install_hooks.sh
hooks/hooks/: pre-commit
src/: __init__.py
