[project]
name = "python-sample-project"
version = "0.1.0"
authors = [{ name = "Ferdinand Keller", email = "ferdinand.keller@proton.me" }]
description = "Some Sample Python Project."
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = ["fastapi[standard]>=0.115.6", "pydantic>=2.10.5"]

[dependency-groups]
dev = ["pyright>=1.1.392.post0", "ruff>=0.9.2"]


# == linting & formating ==
[tool.ruff]
line-length = 120
target-version = "py313"
include = ["src/**/*.py"]

[tool.ruff.lint]
select = ["ALL"]
ignore = ["COM812"]
flake8-quotes = { inline-quotes = "single", multiline-quotes = "double" }
pydocstyle = { convention = "google" }

[tool.ruff.format]
quote-style = "single"

# == static type checking ==
[tool.pyright]
include = ["src/**/*.py"]
